--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.3",
+    "nodemailer": "^6.9.7",
     "validator": "^13.11.0"
   },
   "devDependencies": {
